# schocken-discord-bot

./: .bumpversion.cfg  .gitignore  Dockerfile.local  Dockerfile.pypi  Dockerfile.remote  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage-tests.yml  pythonpublish.yml
logs/: Apr_08_2020_15_27_13_game_log  Apr_08_2020_15_27_24_game_log  Apr_08_2020_15_27_53_game_log  Apr_08_2020_15_32_04_game_log  Apr_08_2020_15_32_22_game_log  Apr_08_2020_15_34_26_game_log  Apr_08_2020_20_14_21_game_log
src/schocken/: __init__.py  __main__.py  bot.py  deckel_management.py  events.py  exceptions.py  run.py  schocken_bot.py  schocken_state_machine.py  schockenrunde.py  spiel.py  spieler.py  wuerfel.py  wurf.py  würfel.py
tests/: offline_test_helpers.py  test_aus_der_hand.py  test_bot.py  test_bot_einwerfen.py  test_deckel_management.py  test_einwerfen.py  test_einwerfen_stechen.py  test_state_machine.py  test_wuerfeln.py  test_wurf_prioritaet.py  test_wurf_priorität.py  test_wurf_wahrscheinlichkeit.py
