[project]
name = "schocken"
version = "0.1.6"
description = "Schocken - The game"
authors = ["Cafe A"]
license = "MIT"
readme = "README.md"
python = "^3.6"

# Requirements
[dependencies]
python-dotenv = ""
pysm = ""
"discord.py" = ""
copy = ""

[dev-dependencies]
black = { version = "^18.3-alpha.0", python = "^3.6" }
pytest = ""
pytest-asyncio = ""
bump2version = ""

[scripts]
schocken = "schocken:main"

[build-system]
requires = [
    "setuptools >= 35.0.2",
    "setuptools_scm >= 2.0.0, <3",
    "toml",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target_version = ['py36']
